--- a/blog-page.html
+++ b/blog-page.html
@@ -51,7 +51,7 @@
             <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
                 <div class="nav-container">
                     <div class="nav-slide-plane">
-                        <a href="/" class="nav-logo-link w-nav-brand">
+                        <a href="./index.html" class="nav-logo-link w-nav-brand">
                             <img src="Icon.svg" alt="" class="nav-logo"/>
                         </a>
                     </div>
