--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
             <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
                 <div class="nav-container">
                     <div class="nav-slide-plane">
-                        <a href="index.html" aria-current="page" class="nav-logo-link w-nav-brand w--current">
+                        <a href="./index.html" aria-current="page" class="nav-logo-link w-nav-brand w--current">
                             <img src="Icon.svg" alt="" class="nav-logo"/>
                         </a>
                     </div>
