--- a/get-started.html
+++ b/get-started.html
@@ -50,7 +50,7 @@
             <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
                 <div class="nav-container">
                     <div class="nav-slide-plane">
-                        <a href="index.html" class="nav-logo-link w-nav-brand">
+                        <a href="./index.html" class="nav-logo-link w-nav-brand">
                             <img src="Icon-white.svg" alt="Pepper Logo" class="nav-logo"/>
                         </a>
                     </div>
