--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
         <meta content="About - Webflow Ecommerce website template" property="og:title"/>
         <meta content="SocialLead is a premium B2B SaaS Webflow Template. Get more customers and highlight your products&#x27; features efficiently with a website that is easy-to-setup and customize." property="og:description"/>
         <meta content="About - Webflow Ecommerce website template" property="twitter:title"/>
-        <meta content="Pepper is a premium B2B SaaS Webflow Template. Get more customers and highlight your products&#x27; features efficiently with a website that is easy-to-setup and customize." property="twitter:description"/>
+        <meta content="SocialLead is a premium SaaS for SocialMedia management using AI. Get more attention and highlight your socials&#x27; features efficiently with a website that is easy-to-setup and customize." property="twitter:description"/>
         <meta property="og:type" content="website"/>
         <meta content="summary_large_image" name="twitter:card"/>
         <meta content="width=device-width, initial-scale=1" name="viewport"/>
@@ -484,7 +484,7 @@
                                                 <p class="para">We are looking for a talented freelance web designer to join the team to help design interactive websites.</p>
                                             </div>
                                             <div class="about-career-btn-block">
-                                                <a href="/careers/web-designer" class="main-button w-button">Apply now</a>
+                                                <a href="./careers.html" class="main-button w-button">Apply now</a>
                                             </div>
                                         </div>
                                     </div>
@@ -498,7 +498,7 @@
                                                 <p class="para">We are looking for a talented freelance web designer to join the team to help design interactive websites.</p>
                                             </div>
                                             <div class="about-career-btn-block">
-                                                <a href="/careers/frontend-developer" class="main-button w-button">Apply now</a>
+                                                <a href="./careers.html" class="main-button w-button">Apply now</a>
                                             </div>
                                         </div>
                                     </div>
@@ -512,7 +512,7 @@
                                                 <p class="para">We are looking for a talented freelance web designer to join the team to help design interactive websites.</p>
                                             </div>
                                             <div class="about-career-btn-block">
-                                                <a href="/careers/backend-developer" class="main-button w-button">Apply now</a>
+                                                <a href="./careers.html" class="main-button w-button">Apply now</a>
                                             </div>
                                         </div>
                                     </div>
@@ -543,7 +543,7 @@
                     <div class="footer-top-container">
                         <div class="footer-conpany-wrap">
                             <a href="/" aria-current="page" class="footer-home-link-block w-inline-block w--current">
-                                <img src="Icon-white.svg" loading="lazy" alt="Pepper Logo" class="footer-logo"/>
+                                <img src="Icon-white.svg" loading="lazy" alt="SocialLead Logo" class="footer-logo"/>
                             </a>
                             <p class="footer-para">SocialLead is one of the most reliable social media mangment service to automate your platforms.</p>
                             <a href="./get-started.html" class="small-buttom w-button">Get Started</a>
