--- a/blog.html
+++ b/blog.html
@@ -410,7 +410,7 @@
                     <div class="footer-top-container">
                         <div class="footer-conpany-wrap">
                             <a href="/" class="footer-home-link-block w-inline-block">
-                                <img src="Icon-white.svg" loading="lazy" alt="Pepper Logo" class="footer-logo"/>
+                                <img src="Icon-white.svg" loading="lazy" alt="SocialLead Logo" class="footer-logo"/>
                             </a>
                             <p class="footer-para">SocialLead is one of the most reliable social media mangment service to automate your platforms.</p>
                             <a href="/get-started" class="small-buttom w-button">Get Started</a>
