--- a/careers.html
+++ b/careers.html
@@ -429,7 +429,7 @@
                                                 <div class="career-role-item-head">
                                                     <div class="career-role-name">Backend Developer</div>
                                                     <div class="career-role-item-tag-wrap">
-                                                        <div>Office</div>
+                                                        <div>Remote</div>
                                                         <div class="career-tag-divider"></div>
                                                         <div>Freelance</div>
                                                     </div>
@@ -467,7 +467,7 @@
                     <div class="footer-top-container">
                         <div class="footer-conpany-wrap">
                             <a href="/" class="footer-home-link-block w-inline-block">
-                                <img src="Icon-white.svg" loading="lazy" alt="Pepper Logo" class="footer-logo"/>
+                                <img src="Icon-white.svg" loading="lazy" alt="SocialLead Logo" class="footer-logo"/>
                             </a>
                             <p class="footer-para">SocialLead is one of the most reliable social media mangment service to automate your platforms.</p>
                             <a href="/get-started" class="small-buttom w-button">Get Started</a>
