--- a/forget-password.html
+++ b/forget-password.html
@@ -51,7 +51,7 @@
                 <div class="nav-container">
                     <div class="nav-slide-plane">
                         <a href="./index.html" class="nav-logo-link w-nav-brand">
-                            <img src="Icon-white.svg" alt="Pepper Logo" class="nav-logo"/>
+                            <img src="Icon-white.svg" alt="SocialLead Logo" class="nav-logo"/>
                         </a>
                     </div>
                 </div>
