--- a/sociallead/public/index.html
+++ b/sociallead/public/index.html
@@ -13,10 +13,11 @@
     <meta property="og:type" content="website"/>
     <meta content="summary_large_image" name="twitter:card"/>
 
-    <link href="https://assets-global.website-files.com/6384d19f2fb3c69ee15983da/css/feedhive-main-website.webflow.138003b36.min.css" rel="stylesheet" type="text/css"/>
-    <link href="https://assets.website-files.com/635f628bf1c725f2f584e359/css/pepper-webflow-ecommerce-template.webflow.5e199ba43.css" rel="stylesheet" type="text/css"/>
+    <link href="./feedhivemain.css" rel="stylesheet" type="text/css"/>
+    <link href="./webflowtemplate1.css" rel="stylesheet" type="text/css"/>
+    <link href="./webflowtemplate2.css" rel="stylesheet" type="text/css"/>
 
-    <link href="https://assets.website-files.com/635f628bf1c725f2f584e359/css/pepper-webflow-ecommerce-template.webflow.5e199ba43.css" rel="stylesheet" type="text/css"/>
+
 
 
 
@@ -69,6 +70,9 @@
     <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=635f628bf1c725f2f584e359" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://assets.website-files.com/635f628bf1c725f2f584e359/js/webflow.119d423e1.js" type="text/javascript"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script>
+    <script src="./sidebar.js" type="text/javascript"></script>
+    <script src="./schedule.js" type="text/javascript"></script>
+
 
     </body>
 </html>
